# my-vcpkg-registry

./: .gitignore  README.md  WINDOWS-GUIDE.md  setup-powershell.ps1  setup-windows.bat  setup.sh  vcpkg-configuration.json  vcpkg.json
docs/: BASE-LIBRARIES-PLAN.md  THIRD-PARTY-ALTERNATIVES.md
ports/base64/: portfile.cmake  usage  vcpkg.json
ports/base64/source/: CMakeLists.txt
ports/binary-serializer/: usage  vcpkg.json
ports/binary-serializer/source/: CMakeLists.txt
ports/cpp-httplib/: portfile.cmake  usage  vcpkg.json
ports/crc-hash/: usage  vcpkg.json
ports/crc-hash/source/: CMakeLists.txt
ports/example-package/: portfile.cmake  usage  vcpkg.json
ports/file-utils/: usage  vcpkg.json
ports/file-utils/source/: CMakeLists.txt
ports/ini-parser/: usage  vcpkg.json
ports/ini-parser/source/: CMakeLists.txt
ports/json-config/: usage  vcpkg.json
ports/json-config/source/: CMakeLists.txt
ports/object-pool/: usage  vcpkg.json
ports/object-pool/source/: CMakeLists.txt
ports/simple-logger/: portfile.cmake  usage  vcpkg.json
ports/simple-logger/source/: CMakeLists.txt
ports/string-utils/: portfile.cmake  usage  vcpkg.json
ports/string-utils/source/: CMakeLists.txt
ports/tcp-client/: usage  vcpkg.json
ports/tcp-client/source/: CMakeLists.txt
ports/thread-pool/: usage  vcpkg.json
ports/thread-pool/source/: CMakeLists.txt
ports/uuid/: usage  vcpkg.json
ports/uuid/source/: CMakeLists.txt
tests/: CMakeLists.txt  build-and-run.ps1  test_all.cpp  vcpkg.json
versions/: v1.0.0.json  version-data.json
(+15 files in other folders)
